--- a/app/src/main/res/layout/activity_wardrobe_page.xml
+++ b/app/src/main/res/layout/activity_wardrobe_page.xml
@@ -3,7 +3,7 @@
     xmlns:android=
         "http://schemas.android.com/apk/res/android"
     android:id=
-        "@+id/some_id"
+        "@+id/wardrobe_page"
     android:layout_width=
         "fill_parent"
     android:layout_height=
@@ -13,47 +13,5 @@
     android:background=
         "#2615DDCA"
     >
-    <Button
-        android:id=
-            "@+id/cloth"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:background="@drawable/log_in_box"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="109dp"
-        android:text="@string/cloth"
-        android:textSize="30dp"
-        android:textAppearance="@string/title_wardrobe">
 
-    </Button>
-
-    <Button
-        android:id="@+id/trousers"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="346dp"
-        android:background="@drawable/log_in_box"
-        android:text="@string/trousers"
-        android:textAppearance="@string/title_wardrobe"
-        android:textSize="30dp">
-
-    </Button>
-
-    <Button
-        android:id="@+id/shoes"
-        android:layout_width="200dp"
-        android:layout_height="150dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="576dp"
-        android:background="@drawable/log_in_box"
-        android:text="@string/shoes"
-        android:textAppearance="@string/title_wardrobe"
-        android:textSize="30dp">
-
-    </Button>
 </RelativeLayout>
