--- a/app/src/main/res/layout/fragment_wardrobe.xml
+++ b/app/src/main/res/layout/fragment_wardrobe.xml
@@ -8,7 +8,7 @@
     tools:context=".Wardrobe_Fragment">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/trousers_button"
         android:layout_width="200dp"
         android:layout_height="120dp"
         android:layout_centerInParent="true"
@@ -18,10 +18,10 @@
         android:textSize="20sp" />
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/cloth_button"
         android:layout_width="200dp"
         android:layout_height="120dp"
-        android:layout_above="@id/button2"
+        android:layout_above="@id/trousers_button"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="90dp"
         android:background="@drawable/radiobutton"
@@ -30,10 +30,10 @@
         android:textSize="20sp"/>
 
     <Button
-        android:id="@+id/button3"
+        android:id="@+id/shoes_button"
         android:layout_width="200dp"
         android:layout_height="120dp"
-        android:layout_below="@id/button2"
+        android:layout_below="@id/trousers_button"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
         android:background="@drawable/radiobutton"
