--- a/app/src/main/res/layout/activity_wardrobe_shoes.xml
+++ b/app/src/main/res/layout/activity_wardrobe_shoes.xml
@@ -39,5 +39,13 @@
             android:layout_centerInParent="true"
             android:text="@string/shoes"
             android:textSize="20sp" />
+        <ImageButton
+            android:id="@+id/shoes_add_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="17dp"
+            android:background="@drawable/add" />
     </RelativeLayout>
 </LinearLayout>
