--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -48,8 +48,9 @@
             android:id="@+id/head"
             android:layout_width="150dp"
             android:layout_height="150dp"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="90dp">
+            android:layout_marginTop="30dp">
 
             <com.example.ai_fashion.CircleImage
                 android:id="@+id/head_image"
@@ -62,14 +63,14 @@
 
         <TextView
             android:id="@+id/account"
-            android:layout_width="103dp"
-            android:layout_height="41dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/account_input"
             android:layout_alignTop="@id/account_input"
             android:layout_alignBottom="@id/account_input"
             android:text="账号："
             android:textAppearance="@style/titleFont"
-            android:textSize="30dp"
+            android:textSize="20dp"
             />
 
         <EditText
@@ -79,20 +80,21 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="31dp"
-            android:layout_marginBottom="489dp"
+            android:layout_marginBottom="419dp"
             android:maxLines="1"
+            android:padding="5dp"
             android:background="@drawable/log_in_box" />
 
         <TextView
             android:id="@+id/password"
-            android:layout_width="103dp"
-            android:layout_height="41dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/password_input"
             android:layout_alignTop="@id/password_input"
             android:layout_alignBottom="@id/password_input"
             android:text="密码："
             android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/password_input"
@@ -101,21 +103,22 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="31dp"
-            android:layout_marginBottom="389dp"
-            android:maxLines="1"
+            android:layout_marginBottom="319dp"
             android:background="@drawable/log_in_box"
+            android:maxLines="1"
+            android:padding="5dp"
             android:text="" />
 
         <TextView
             android:id="@+id/birthday"
-            android:layout_width="103dp"
-            android:layout_height="46dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/birthday_input"
             android:layout_alignTop="@id/birthday_input"
             android:layout_alignBottom="@id/birthday_input"
             android:text="生日："
             android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/birthday_input"
@@ -123,45 +126,48 @@
             android:layout_height="41dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="289dp"
-            android:maxLines="1"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="219dp"
             android:background="@drawable/log_in_box"
+            android:maxLines="1"
+            android:padding="5dp"
             android:text="" />
 
         <TextView
             android:id="@+id/nickname"
-            android:layout_width="103dp"
-            android:layout_height="46dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_toLeftOf="@id/nickname_input"
             android:layout_alignTop="@id/nickname_input"
             android:layout_alignBottom="@id/nickname_input"
             android:text="昵称："
             android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
+            android:textSize="20dp" />
 
         <EditText
             android:id="@+id/nickname_input"
-            android:maxLines="1"
-            android:singleLine="true"
             android:layout_width="300dp"
             android:layout_height="41dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginEnd="31dp"
-            android:layout_marginBottom="189dp"
+            android:layout_marginBottom="119dp"
             android:background="@drawable/log_in_box"
+            android:maxLines="1"
+            android:padding="5dp"
+            android:singleLine="true"
             android:text="" />
 
         <Button
             android:id="@+id/modify_button"
-            android:layout_width="106dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
             android:layout_marginStart="170dp"
             android:layout_marginTop="545dp"
-            android:layout_marginEnd="134dp"
+            android:layout_marginEnd="170dp"
             android:layout_marginBottom="49dp"
             android:background="@drawable/homepage_botton"
             android:text="@string/modify"
