--- a/app/src/main/res/layout/activity_body_page.xml
+++ b/app/src/main/res/layout/activity_body_page.xml
@@ -43,73 +43,84 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <TextView
             android:id="@+id/height"
-            android:layout_width="103dp"
-            android:layout_height="41dp"
-            android:layout_toLeftOf="@id/height_input"
+            android:layout_width="122dp"
+            android:layout_height="40dp"
             android:layout_alignTop="@id/height_input"
             android:layout_alignBottom="@id/height_input"
+            android:layout_marginTop="3dp"
+            android:layout_marginRight="2dp"
+            android:layout_marginBottom="2dp"
+            android:layout_toLeftOf="@id/height_input"
             android:text="身高："
             android:textAppearance="@style/titleFont"
-            android:textSize="30dp"
-            />
+            android:textSize="25dp" />
 
         <EditText
             android:id="@+id/height_input"
-            android:layout_width="300dp"
+            android:layout_width="240dp"
             android:layout_height="41dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="689dp"
-            android:maxLines="1"
-            android:background="@drawable/log_in_box" />
-
-        <TextView
-            android:id="@+id/weight"
-            android:layout_width="103dp"
-            android:layout_height="41dp"
-            android:layout_toLeftOf="@id/weight_input"
-            android:layout_alignTop="@id/weight_input"
-            android:layout_alignBottom="@id/weight_input"
-            android:text="体重："
-            android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
-
-        <EditText
-            android:id="@+id/weight_input"
-            android:layout_width="300dp"
-            android:layout_height="41dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="489dp"
-            android:maxLines="1"
+            android:layout_marginEnd="40dp"
+            android:layout_marginBottom="385dp"
             android:background="@drawable/log_in_box"
+            android:maxLines="1"
+            android:padding="5dp"
             android:text="" />
 
         <TextView
-            android:id="@+id/proportion"
-            android:layout_width="103dp"
-            android:layout_height="46dp"
-            android:layout_toLeftOf="@id/proportion_input"
-            android:layout_alignTop="@id/proportion_input"
-            android:layout_alignBottom="@id/proportion_input"
-            android:text="身材比例："
+            android:id="@+id/weight"
+            android:layout_width="122dp"
+            android:layout_height="40dp"
+            android:layout_alignTop="@id/weight_input"
+            android:layout_alignBottom="@id/weight_input"
+            android:layout_marginBottom="3dp"
+            android:layout_toLeftOf="@id/weight_input"
+            android:text="体重："
             android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
+            android:textSize="25dp" />
 
         <EditText
-            android:id="@+id/proportion_input"
-            android:layout_width="300dp"
+            android:id="@+id/weight_input"
+            android:layout_width="240dp"
             android:layout_height="41dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="289dp"
-            android:maxLines="1"
+            android:layout_marginEnd="39dp"
+            android:layout_marginBottom="498dp"
             android:background="@drawable/log_in_box"
+            android:padding="5dp"
+            android:maxLines="1" />
+
+        <TextView
+            android:id="@+id/proportion"
+            android:layout_width="wrap_content"
+            android:layout_height="40dp"
+            android:layout_alignTop="@id/proportion_input"
+            android:layout_alignBottom="@id/proportion_input"
+            android:layout_marginTop="1dp"
+            android:layout_marginRight="-2dp"
+            android:layout_marginBottom="0dp"
+            android:layout_toLeftOf="@id/proportion_input"
+            android:text="身材比例："
+            android:singleLine="true"
+            android:textAppearance="@style/titleFont"
+            android:textSize="25dp" />
+
+        <EditText
+            android:id="@+id/proportion_input"
+            android:layout_width="240dp"
+            android:layout_height="39dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="38dp"
+            android:layout_marginBottom="252dp"
+            android:background="@drawable/log_in_box"
+            android:padding="5dp"
+            android:maxLines="1"
             android:text="" />
 
         <Button
