--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -25,6 +25,7 @@
         android:id="@+id/new_Account"
         android:layout_width="100dp"
         android:layout_height="39dp"
+        android:layout_centerHorizontal="true"
         android:layout_centerInParent="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
@@ -72,8 +73,8 @@
         android:layout_height="28dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="116dp"
-        android:layout_marginTop="211dp"
+        android:layout_marginStart="83dp"
+        android:layout_marginTop="210dp"
         android:layout_marginEnd="245dp"
         android:layout_marginBottom="463dp"
         android:background="@drawable/birthdayview"
