--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
@@ -49,7 +50,7 @@
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="90dp">
+            android:layout_marginTop="40dp">
 
             <com.example.ai_fashion.CircleImage
                 android:id="@+id/head_image"
@@ -60,113 +61,123 @@
             </com.example.ai_fashion.CircleImage>
         </FrameLayout>
 
-        <TextView
-            android:id="@+id/account"
-            android:layout_width="103dp"
-            android:layout_height="41dp"
-            android:layout_toLeftOf="@id/account_input"
-            android:layout_alignTop="@id/account_input"
-            android:layout_alignBottom="@id/account_input"
-            android:text="账号："
-            android:textAppearance="@style/titleFont"
-            android:textSize="30dp"
-            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@id/head"
+            android:layout_marginTop="30dp"
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/account_input"
-            android:layout_width="300dp"
-            android:layout_height="41dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="489dp"
-            android:maxLines="1"
-            android:background="@drawable/log_in_box" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/password"
-            android:layout_width="103dp"
-            android:layout_height="41dp"
-            android:layout_alignTop="@id/password_input"
-            android:layout_alignBottom="@id/password_input"
-            android:layout_toLeftOf="@id/password_input"
-            android:text="密码："
-            android:textAppearance="@style/titleFont"
-            android:textSize="26sp" />
+                <TextView
+                    android:id="@+id/account"
+                    android:layout_width="wrap_content"
+                    android:layout_height="41dp"
+                    android:layout_marginStart="15dp"
+                    android:text="账号："
+                    android:textAppearance="@style/titleFont"
+                    android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/password_input"
-            android:layout_width="300dp"
-            android:layout_height="41dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="389dp"
-            android:maxLines="1"
-            android:background="@drawable/log_in_box"
-            android:text="" />
+                <EditText
+                    android:id="@+id/account_input"
+                    android:layout_width="260dp"
+                    android:layout_height="41dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/log_in_box"
+                    android:maxLines="1" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/birthday"
-            android:layout_width="103dp"
-            android:layout_height="46dp"
-            android:layout_toLeftOf="@id/birthday_input"
-            android:layout_alignTop="@id/birthday_input"
-            android:layout_alignBottom="@id/birthday_input"
-            android:text="生日："
-            android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/birthday_input"
-            android:layout_width="300dp"
-            android:layout_height="41dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="289dp"
-            android:maxLines="1"
-            android:background="@drawable/log_in_box"
-            android:text="" />
+                <TextView
+                    android:id="@+id/password"
+                    android:layout_width="wrap_content"
+                    android:layout_height="41dp"
+                    android:layout_marginStart="15dp"
+                    android:text="密码："
+                    android:textAppearance="@style/titleFont"
+                    android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/nickname"
-            android:layout_width="103dp"
-            android:layout_height="46dp"
-            android:layout_toLeftOf="@id/nickname_input"
-            android:layout_alignTop="@id/nickname_input"
-            android:layout_alignBottom="@id/nickname_input"
-            android:text="昵称："
-            android:textAppearance="@style/titleFont"
-            android:textSize="30dp" />
+                <EditText
+                    android:id="@+id/password_input"
+                    android:layout_width="260dp"
+                    android:layout_height="41dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/log_in_box"
+                    android:maxLines="1"
+                    android:text="" />
+            </LinearLayout>
 
-        <EditText
-            android:id="@+id/nickname_input"
-            android:maxLines="1"
-            android:singleLine="true"
-            android:layout_width="300dp"
-            android:layout_height="41dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="189dp"
-            android:background="@drawable/log_in_box"
-            android:text="" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/modify_button"
-            android:layout_width="106dp"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="170dp"
-            android:layout_marginTop="545dp"
-            android:layout_marginEnd="134dp"
-            android:layout_marginBottom="49dp"
-            android:background="@drawable/homepage_botton"
-            android:text="@string/modify"
-            android:textAppearance="@style/homepage_botton_font"
-            android:textSize="20dp" />
+                <TextView
+                    android:id="@+id/nickname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="46dp"
+                    android:layout_marginStart="15dp"
+                    android:text="昵称："
+                    android:textAppearance="@style/titleFont"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/nickname_input"
+                    android:layout_width="260dp"
+                    android:layout_height="41dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/log_in_box"
+                    android:maxLines="1"
+                    android:singleLine="true"
+                    android:text="" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="80dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/birthday"
+                    android:layout_width="wrap_content"
+                    android:layout_height="46dp"
+                    android:layout_marginStart="15dp"
+                    android:text="年龄："
+                    android:textAppearance="@style/titleFont"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/birthday_input"
+                    android:layout_width="260dp"
+                    android:layout_height="41dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@drawable/log_in_box"
+                    android:maxLines="1"
+                    android:text="" />
+            </LinearLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Button
+                    android:id="@+id/modify_button"
+                    android:layout_width="106dp"
+                    android:layout_height="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:background="@drawable/homepage_botton"
+                    android:text="@string/modify"
+                    android:textAppearance="@style/homepage_botton_font"
+                    android:textSize="20dp" /></RelativeLayout>
+        </LinearLayout>
 
 
     </RelativeLayout>
