优化登录页、启动页的标题

--- a/app/src/main/res/layout/activity_welcome_page.xml
+++ b/app/src/main/res/layout/activity_welcome_page.xml
@@ -14,13 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginLeft="44dp"
         android:layout_marginTop="267dp"
-        android:layout_marginEnd="113dp"
-        android:layout_marginBottom="400dp"
-        android:gravity="left|top"
         android:lineSpacingExtra="-7.6dp"
         android:text="@string/title_welcome"
         android:textAppearance="@style/titleFont"
@@ -30,15 +25,11 @@
         android:id="@+id/oero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="171dp"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="328dp"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="333dp"
-        android:gravity="left|top"
+        android:layout_marginRight="50dp"
+        android:gravity="right|top"
         android:lineSpacingExtra="-7.6dp"
         android:text="@string/title_oreo"
         android:textAppearance="@style/titleFont"
