--- a/app/src/main/res/layout/activity_log_in_page.xml
+++ b/app/src/main/res/layout/activity_log_in_page.xml
@@ -44,10 +44,10 @@
         android:id="@+id/oero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="183dp"
+        android:layout_alignParentRight="true"
         android:layout_marginTop="155dp"
+        android:layout_marginRight="40dp"
         android:gravity="left|top"
         android:lineSpacingExtra="-7.6dp"
         android:text="@string/title_oreo"
