--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -13,7 +13,11 @@
         android:layout_height="match_parent"
         android:layout_above="@id/bottomNavigationView">
     </FrameLayout>
-
+    <TextView
+        android:id="@+id/welcome_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 
     <!--底部导航栏-->
     <com.google.android.material.bottomnavigation.BottomNavigationView
