--- a/app/src/main/res/layout/fragment_dressing.xml
+++ b/app/src/main/res/layout/fragment_dressing.xml
@@ -1,31 +1,95 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#6615DDCA"
-    tools:context=".Dressing_Fragment">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+    android:background="@color/page_background"
+    android:clipToOutline="true">
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/white" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/white">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/divider" />
 
-    <Button
-        android:id="@+id/recommend_button"
-        android:layout_width="160dp"
-        android:layout_height="100dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
-        android:background="@drawable/homepage_botton"
-        android:text="@string/recommend"
-        android:textColor="@color/white" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/title_dressing"
+            android:textSize="20sp" />
+    </RelativeLayout>
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="160dp"
-        android:layout_height="100dp"
-        android:layout_below="@id/recommend_button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="120dp"
-        android:background="@drawable/homepage_botton"
-        android:text="@string/mark"
-        android:textColor="@color/white" />
-</RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/weather_layout"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:background="@drawable/weather_frame"
+        android:layout_gravity="right"
+        android:padding="16dp">
+
+        <View
+            android:id="@+id/location_icon"
+            android:layout_width="10dp"
+            android:layout_height="13dp"
+            android:layout_marginTop="0dp"
+            android:background="@drawable/location_icon"
+            android:clipToOutline="true"
+            />
+
+         <!-- Replace with your weather icon -->
+
+        <TextView
+            android:id="@+id/location_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toEndOf="@id/location_icon"
+            android:layout_alignTop="@id/location_icon"
+            android:layout_alignBottom="@id/location_icon"
+            android:layout_marginStart="10dp"
+            android:text="Location"
+            android:padding="0dp"
+            android:textSize="8sp" />
+
+        <TextView
+            android:id="@+id/temperature_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/location_text"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            android:text="Temperature"
+            android:textSize="10sp" />
+
+        <ImageView
+            android:id="@+id/weather_icon"
+            android:layout_width="69dp"
+            android:layout_height="23dp"
+            android:layout_below="@id/temperature_text"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="5dp"
+             />
+        <TextView
+            android:id="@+id/weather_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/weather_icon"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="8dp"
+            android:textSize="10sp"
+            android:text="Weather"
+        />
+
+    </RelativeLayout>
+
+</LinearLayout>
