--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -56,7 +56,7 @@
                 android:id="@+id/head_image"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:src="@drawable/ic_picture">
+                android:src="@drawable/default_icon">
 
             </com.example.ai_fashion.CircleImage>
         </FrameLayout>
