衣橱的删除功能

--- a/app/src/main/res/layout/activity_wardrobe_trousers.xml
+++ b/app/src/main/res/layout/activity_wardrobe_trousers.xml
@@ -26,6 +26,14 @@
             android:layout_marginLeft="17dp"
             android:background="@drawable/backtohomepage"
             android:src="@drawable/arrow_circle_left" />
+        <TextView
+            android:id="@+id/trousers_cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="17dp"
+            android:text="取消" />
 
         <View
             android:layout_width="match_parent"
@@ -34,6 +42,7 @@
             android:background="@drawable/divider" />
 
         <TextView
+            android:id="@+id/trousers_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
@@ -48,6 +57,15 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="17dp"
             android:background="@drawable/add" />
+
+        <TextView
+            android:id="@+id/trousers_confirm"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="17dp"
+            android:text="确定" />
     </RelativeLayout>
     <RelativeLayout
         android:layout_width="match_parent"
