--- a/app/src/main/res/layout/activity_account_page.xml
+++ b/app/src/main/res/layout/activity_account_page.xml
@@ -146,7 +146,7 @@
                 android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/birthday"
+                    android:id="@+id/age"
                     android:layout_width="wrap_content"
                     android:layout_height="46dp"
                     android:layout_marginStart="15dp"
@@ -155,7 +155,7 @@
                     android:textSize="20sp" />
 
                 <EditText
-                    android:id="@+id/birthday_input"
+                    android:id="@+id/age_input"
                     android:layout_width="260dp"
                     android:layout_height="41dp"
                     android:layout_marginEnd="20dp"
